# miron_test_1

./: README.md  project  pyproject.toml
sqls/: product.sql  users.sql
src/: forms.py  main.py
src/templates/: 404.j2  base.j2  calc.j2  index.j2  login.j2  more.j2  page_1.j2  product_card.j2  registration.j2
