[tool.poetry]
name = "shop"
version = "0.1.0"
description = "Интернет-магазин"
authors = ["Serge <sergelab@gmail.com>"]
license = "ISC"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
WTForms = "^3.0.1"
Flask-WTF = "^1.0.1"
Flask-DebugToolbar = "^0.13.1"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
Flask-Login = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
